<?xml version="1.0"?>
<package>
  <name>webots_ros</name>
  <version>2.0.4</version>
  <description>The ROS package containing examples for interfacing ROS with the standard ROS controller of Webots</description>

  <url>http://wiki.ros.org/webots_ros</url>
  <maintainer email="support@cyberbotics.com">Cyberbotics</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>yt</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>lebai_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>lebai_msgs</run_depend>
  <run_depend>OpenCV</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>yt</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>

</package>
